# flutter_rust_ffi

./: README.md  ffigen.bat  ffigen.command  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/angcyo/ffi/flutter_rust_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner-release.xcscheme
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_rust_ffi.podspec
lib/: flutter_rust_ffi.dart  flutter_rust_ffi_bindings_generated.dart
linux/: CMakeLists.txt
macos/: flutter_rust_ffi.podspec
macos/Classes/: flutter_rust_ffi.c
rust/: .gitignore  Cargo.toml  android_build.bat  android_build.command  generate_headers.command  ios_build.command  rust_api_test.h
rust/src/: lib.rs
src/: CMakeLists.txt  flutter_rust_ffi.c  flutter_rust_ffi.h
windows/: CMakeLists.txt
